--- a/src/commonComponent.js/footer/footer.scss
+++ b/src/commonComponent.js/footer/footer.scss
@@ -1,5 +1,7 @@
 .footer-div {
   background-color: #1e2232;
   color: white;
-  padding: 2em;
+  padding: 2px;
+  text-align: center;
+  margin-top: 20px;
 }
