--- a/src/commonComponent.js/drawer/drawer.scss
+++ b/src/commonComponent.js/drawer/drawer.scss
@@ -1,3 +1,15 @@
 .filter-drawer {
   font-size: 22px;
 }
+.slider-box{
+  width: 60%;
+  margin-left: 15px;
+}
+@media(max-width: 37.5em){
+  .filter-drawer{
+    font-size: 16px;
+  }
+  .filter-drawer-mobile-view{
+    font-size: 5px;
+  }
+}
