--- a/src/components/mainGrid.scss
+++ b/src/components/mainGrid.scss
@@ -49,11 +49,12 @@
 .mainGrid-view {
   width: 25%;
 }
-.appbar-main {
-  width: calc(90% - 240px);
+.typo-class {
+  margin-left: 12em !important;
 }
-.css-11b3ww9-MuiPaper-root-MuiAppBar-root {
-  width: 82% !important;
+
+.appbar-main {
+  width: -100%;
 }
 @media (max-width: 37.5em) {
   .drawer-class {
@@ -72,9 +73,9 @@
   .mainGrid-view {
     width: 70%;
   }
-  .css-11b3ww9-MuiPaper-root-MuiAppBar-root {
-    width: 65% !important;
-  }
+  // .css-11b3ww9-MuiPaper-root-MuiAppBar-root {
+  //   width: 65% !important;
+  // }
   .box-image {
     width: 90%;
     height: 60%;
@@ -82,5 +83,8 @@
   .product-details {
     text-align: left;
     font-size: 9px;
+  }
+  .typo-class {
+    margin-left: 7em !important;
   }
 }
